# brutebot

./: README.md  bot3.cabal
app/: Main.hs
