cabal-version:      3.0

name:               MyTelegramBot
version:            0.1.0.0
license:            NONE
author:             Unknown
maintainer:         Unknown

executable MyTelegramBot
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    
      base                >=4.17.0.0 && <4.20,
      telegram-bot-simple >=0.6.0,
      telegram-bot-api    >=6.5.0,
      text                >=1.2.5,
      time                >=1.12.2,
      bytestring,
      async,
      pureMD5
  ghc-options:      -Wall
  default-language: Haskell2010

